# cellspace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
cellspace/_spatialdataset/: _spatialdataset.py
tests/: test_dummy_test.py
tests/_spatialdataset/: test_spatialdataset.py
